mobile overflow fix, reduce fat parent node ++

--- a/styles.css
+++ b/styles.css
@@ -170,7 +170,7 @@ button:hover {
 
 /* mostly parent styles */
 .parent-node {
-    padding: 0.75rem;
+    padding: 0.30rem;
     text-align: center;
     position: relative;
 }
@@ -192,13 +192,13 @@ button:hover {
     margin: 0 0.5rem ;
 }
 .parent-link {
-    /* width: 60%;
+    width: 60%;
     max-height: 55px;
     overflow: hidden;
     margin: auto;
-    display: block; */
+    display: inline-block;
     color: inherit;
-    padding: 0.75rem;
+    padding: 0.25rem;
     animation: blink 1.5s 0.5s ease-in-out  infinite;
 }
 .parent-link:hover {
